Closed
Bug 933124
Opened 12 years ago
Closed 12 years ago
Fix -Wformat warning in nsObjCExceptions.h: values of type 'NSUInteger' should not be used as format arguments
Categories
(Core :: XPCOM, defect)
Tracking
()
RESOLVED
FIXED
mozilla28
| Tracking | Status | |
|---|---|---|
| firefox25 | --- | unaffected |
| firefox26 | --- | affected |
| firefox27 | --- | wontfix |
| firefox28 | --- | fixed |
People
(Reporter: cpeterson, Assigned: cpeterson)
References
(Blocks 1 open bug)
Details
(Whiteboard: [qa-])
Attachments
(1 file)
|
1.16 KB,
patch
|
dougt
:
review+
|
Details | Diff | Splinter Review |
When trying to build a 32-bit debug on OS X, I hit the following warning-as-error:
In file included from mozilla/central/uriloader/exthandler/mac/nsLocalHandlerAppMac.mm:8:
../../dist/include/nsObjCExceptions.h:90:62: error: values of type 'NSUInteger' should not be used as format arguments; add an explicit cast to 'unsigned long' instead [-Werror,-Wformat]
[args addObject:[NSString stringWithFormat:@"0x%lx", address]];
~~~ ^~~~~~~
(unsigned long)
Cocoa typedefs NSUInteger as unsigned long:
> When building 32-bit applications, NSUInteger is a 32-bit unsigned integer. A 64-bit application treats NSUInteger as a 64-bit unsigned integer
Attachment #825117 -
Flags: review?(doug.turner)
Comment 1•12 years ago
|
||
Comment on attachment 825117 [details] [diff] [review]
fix-NSUInteger-warning.patch
Review of attachment 825117 [details] [diff] [review]:
-----------------------------------------------------------------
lgtm
Attachment #825117 -
Flags: review?(doug.turner) → review+
| Assignee | ||
Comment 2•12 years ago
|
||
status-firefox25:
--- → unaffected
status-firefox26:
--- → affected
status-firefox27:
--- → wontfix
status-firefox28:
--- → fixed
| Assignee | ||
Updated•12 years ago
|
Assignee: nobody → cpeterson
Status: NEW → ASSIGNED
Comment 3•12 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla28
You need to log in
before you can comment on or make changes to this bug.
Description
•