Bug 933124 - Fix -Wformat warning in nsObjcExceptions.h. r=dougt